# ArchProbe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/archprobe/: CMakeLists.txt  app.cpp  env.cpp  env.hpp
examples/adreno640/Google_Pixel_4/: ArchProbe.json  ArchProbeReport.json  BufferBandwidth.csv  BufferCacheHierarchyPChase.csv  BufferCachelineSize.csv  BufferVecWidth.csv  ConstMemBandwidth.csv  Gflops.csv  ImageBandwidth.csv  ImageCacheHierarchyPChase.csv  ImageCachelineSize.csv  LocalMemBandwidth.csv  RegCount.csv  WarpSizeMethodA.csv  WarpSizeMethodB.csv  log.txt
include/: args.hpp  assert.hpp  cl.hpp  json.hpp  log.hpp  stats.hpp  table.hpp  util.hpp
scripts/: Pull-AndroidArtifacts.ps1  Remove-AndroidArtifacts.ps1  Run-Android.ps1
src/: args.cpp  assert.cpp  cl.cpp  json.cpp  log.cpp  table.cpp  util.cpp
